# acl-anthology-rag

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  vercel.json
api/: .env.example  app.py  pyproject.toml
api/eval/: __init__.py  config.py  dataset.py  runner.py
api/eval/ablations/: __init__.py  runner.py
api/eval/data/: ground_truth.json
api/eval/data/results/: ablation_20260129T182945Z.json  latest.json  summary_table.csv
api/eval/metrics/: __init__.py  filter_parsing.py  generation.py  latency.py  reformulation.py  retrieval.py
api/eval/reports/: __init__.py  visualizer.py
api/eval/scripts/: __init__.py  generate_report.py  run_ablation.py  run_eval.py
api/scripts/: setup_indexes.py
api/src/: __init__.py  main.py
api/src/api/: __init__.py  app.py  routes.py
api/src/core/: __init__.py  config.py  schemas.py
api/src/ingestion/: README.md  __init__.py  download.py  embed.py  ingest.py  preprocess.py
api/src/llm/: __init__.py  prompts.py  reformulator.py
api/src/retrieval/: __init__.py  aggregator.py  embedding.py  filter_builder.py  filter_parser.py  pipeline.py  qdrant_store.py  query_processor.py
api/src/v1/: app.py  config.py
api/src/v1/papers/: acl_fetcher.py  paper_service.py
api/src/vectorstore/: __init__.py  client.py
client/: .env.prod  README.md  package-lock.json  package.json
client/src/: App.tsx  index.css
docs/: EMBEDDINGS.md  PROJECT_SCOPE.md  architecture.md  configuration.md  evaluation.md  installation.md  usage.md  workflows.md
scripts/: env-gen.py  env-gen.sh
src/: main.py
(+17 files in other folders)
